added logs to findByName

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,18 @@
             <artifactId>spring-data-rest-core</artifactId>
             <version>3.2.1.RELEASE</version>
         </dependency>
+        <!-- SLF4J -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <!-- Logback (implementacja SLF4J) -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
