--- a/Pokemondle FrontEnd/Pokemondle/package.json
+++ b/Pokemondle FrontEnd/Pokemondle/package.json
@@ -34,5 +34,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.1.3"
+  },
+  "scripts": {
+    "build": "react-scripts build",
+    "test": "react-scripts test --watchAll=false"
   }
 }
