--- a/Pokemondle Backend/pom.xml
+++ b/Pokemondle Backend/pom.xml
@@ -62,19 +62,16 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-        </plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>  <!-- Możesz spróbować zmienić na 3.10.1 lub 3.9.0 -->
+        <configuration>
+            <source>20</source>
+            <target>20</target>
+        </configuration>
+             </plugin>
+         </plugins>
     </build>
 
 </project>
